refactor(backend): 各域模块收口与文档同步